--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+		"magento/module-catalog": "^1.0.0"
+	},
     "autoload": {
         "files": [
             "registration.php"
@@ -19,6 +21,5 @@
         "psr-4": {
             "Review\\Reminder\\": ""
         }
-    },
-	"minimum-stability": "dev"
+    }
 }
