--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "review/module-reminder",
     "description": "Product Review Reminder Module",
     "type": "magento2-module",
-	"version": "1.0.1",
+	"version": "1.1.0",
     "license": "proprietary",
     "authors": [
         {
@@ -10,7 +10,7 @@
             "name": "Mohit Chauhan"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
 		"magento/module-catalog": "^1.0.0"
 	},
